# xtsci-linalg

./: .envrc  .pre-commit-config.yaml  meson.build  pixi.toml  readme.org
CppCore/: meson.build
CppCore/tests/: cg_test.cpp
CppCore/xtsci/linalg/iterative/: base.hpp  cg.hpp
CppCore/xtsci/linalg/precond/: identity.hpp  jacobi.hpp
bindings/pyb11/: meson.build  xtsci_linalg_pyb11.cc
scripts/: basic_cg_bench.py  scipy_test.py
